Automated cleanups to use Java 21 features where appropriate.
And other suggested fixes (typos, etc).

PiperOrigin-RevId: 758418737