@@ -68,7 +68,7 @@ public abstract class UnionTypeDescriptor extends TypeDescriptor {
   @Memoized
   public DeclaredTypeDescriptor getClosestCommonSuperClass() {
     DeclaredTypeDescriptor typeDescriptor =
-        (DeclaredTypeDescriptor) getUnionTypeDescriptors().get(0);
+        (DeclaredTypeDescriptor) getUnionTypeDescriptors().getFirst();
     while (typeDescriptor != null && !isAssignableTo(typeDescriptor)) {
       typeDescriptor = typeDescriptor.getSuperTypeDescriptor();
     }
@@ -106,7 +106,7 @@ public abstract class UnionTypeDescriptor extends TypeDescriptor {
   @Override
   @Nullable
   public MethodDescriptor getMethodDescriptor(String methodName, TypeDescriptor... parameters) {
-    // There might be different methods in the different components of the union with/ different
+    // There might be different methods in the different components of the union with different
     // parameterizations, so this method should return one with a parameterization that
     // consistent with all components. For this reason the method is not supported.
     throw new UnsupportedOperationException("getMethodDescriptor is unsupported in union types.");
